chore: Upgraded yarn and removed knobs

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,11 @@ dist/
 # __screenshots__/**/*
 # *.playwright.json
 # *snap.png
+
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
