--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "jest-cli": "^27.3.1",
     "jest-enzyme": "^7.1.2",
     "jest-fetch-mock": "^3.0.3",
+    "jest-mock": "^27.3.0",
     "jest-mock-console": "^1.2.3",
     "prettier": "^2.2.0",
     "react-draggable": "^4.4.3",
