--- a/package.json
+++ b/package.json
@@ -53,39 +53,40 @@
     "@types/enzyme": "^3.10.8",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/express": "^4.17.9",
-    "@types/glob": "^7.1.3",
-    "@types/jest": "^27.0.3",
-    "@types/jest-image-snapshot": "^4.3.1",
-    "@types/jsonfile": "^6.0.0",
-    "@types/node": "^16.4.13",
-    "@types/react": "17.0.16",
-    "@types/react-dom": "17.0.16",
-    "@types/sharp": "^0.28.5",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
+    "@types/glob": "^7.2.0",
+    "@types/jest": "^28.1.8",
+    "@types/jest-image-snapshot": "^6.1.0",
+    "@types/jsonfile": "^6.1.0",
+    "@types/node": "^16.18.11",
+    "@types/react": "17.0.52",
+    "@types/react-dom": "17.0.18",
+    "@types/sharp": "^0.28.6",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
-    "babel-jest": "^27.3.1",
+    "babel-jest": "^28.1.3",
     "babel-loader": "^8.2.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-jest": "^25.3.0",
+    "eslint-plugin-jest": "^27.1.7",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-sort-keys-fix": "^1.1.1",
-    "jest": "^27.3.1",
-    "jest-cli": "^27.3.1",
+    "jest": "^28.1.3",
+    "jest-cli": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "jest-enzyme": "^7.1.2",
     "jest-fetch-mock": "^3.0.3",
-    "jest-mock": "^27.3.0",
-    "jest-mock-console": "^1.2.3",
+    "jest-mock": "^28.1.3",
+    "jest-mock-console": "^1.3.0",
     "prettier": "^2.2.0",
     "react-draggable": "^4.4.3",
     "rimraf": "^3.0.2",
     "storybook-dark-mode": "^1.0.8",
-    "ts-jest": "^27.0.7",
+    "ts-jest": "^28.0.8",
     "tslib": "2.4.0",
     "webpack": "5.74.0",
     "webpack-virtual-modules": "0.4.4"
@@ -124,7 +125,7 @@
     "fast-glob": "^3.2.4",
     "hash-sum": "^2.0.0",
     "ip": "^1.1.5",
-    "jest-image-snapshot": "^4.5.1",
+    "jest-image-snapshot": "^5.2.0",
     "join-images": "^1.1.3",
     "jsonfile": "^6.1.0",
     "lodash": "^4.17.20",
@@ -146,7 +147,7 @@
     "sharp": "^0.30.4",
     "tinycolor2": "^1.4.2",
     "ts-to-json": "^1.7.0",
-    "typescript": "4.2.3",
+    "typescript": "4.9.4",
     "webpack-sources": "^3.2.3"
   },
   "storybook": {
