--- a/package.json
+++ b/package.json
@@ -42,54 +42,53 @@
     "storybook-addon"
   ],
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/preset-env": "^7.16.4",
-    "@babel/preset-react": "^7.16.0",
-    "@babel/preset-typescript": "^7.16.0",
-    "@storybook/addon-controls": "6.4.13",
-    "@storybook/react": "^6.4.13",
-    "@testing-library/react-hooks": "^7.0.2",
-    "@tippyjs/react": "^4.2.0",
-    "@types/enzyme": "^3.10.8",
+    "@babel/core": "^7.22.1",
+    "@babel/preset-env": "^7.22.4",
+    "@babel/preset-react": "^7.22.3",
+    "@babel/preset-typescript": "^7.21.5",
+    "@storybook/addon-controls": "7.0.18",
+    "@storybook/react": "^7.0.18",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@tippyjs/react": "^4.2.6",
+    "@types/enzyme": "^3.10.13",
     "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@types/express": "^4.17.9",
-    "@types/glob": "^7.2.0",
-    "@types/jest": "^28.1.8",
+    "@types/express": "^4.17.17",
+    "@types/glob": "^8.1.0",
+    "@types/jest": "^29.5.1",
     "@types/jest-image-snapshot": "^6.1.0",
-    "@types/jsonfile": "^6.1.0",
-    "@types/node": "^16.18.11",
-    "@types/react": "17.0.52",
-    "@types/react-dom": "17.0.18",
-    "@types/sharp": "^0.28.6",
-    "@typescript-eslint/eslint-plugin": "^5.47.1",
-    "@typescript-eslint/parser": "^5.47.1",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
-    "babel-jest": "^28.1.3",
-    "babel-loader": "^8.2.3",
+    "@types/jsonfile": "^6.1.1",
+    "@types/node": "^20.2.5",
+    "@types/react": "^16.0.0",
+    "@types/react-dom": "^16.0.0",
+    "@types/sharp": "^0.31.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
+    "babel-jest": "^29.5.0",
+    "babel-loader": "^9.1.2",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
-    "eslint": "^8.3.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-jest": "^27.1.7",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-sort-keys-fix": "^1.1.1",
-    "jest": "^28.1.3",
-    "jest-cli": "^28.1.3",
-    "jest-environment-jsdom": "^28.1.3",
-    "jest-enzyme": "^7.1.2",
+    "enzyme-adapter-react-16": "^1.15.7",
+    "eslint": "^8.41.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-sort-keys-fix": "^1.1.2",
+    "jest": "^29.5.0",
+    "jest-cli": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-enzyme": "^4.2.0",
     "jest-fetch-mock": "^3.0.3",
-    "jest-mock": "^28.1.3",
-    "jest-mock-console": "^1.3.0",
-    "prettier": "^2.2.0",
-    "react-draggable": "^4.4.3",
-    "rimraf": "^3.0.2",
-    "storybook-dark-mode": "^1.0.8",
-    "ts-jest": "^28.0.8",
-    "tslib": "2.4.0",
-    "webpack": "5.74.0",
-    "webpack-virtual-modules": "0.4.4"
+    "jest-mock": "^29.5.0",
+    "jest-mock-console": "^2.0.0",
+    "prettier": "^2.8.8",
+    "react-draggable": "^4.4.5",
+    "rimraf": "^5.0.1",
+    "storybook-dark-mode": "^3.0.0",
+    "ts-jest": "^29.1.0",
+    "tslib": "2.5.2",
+    "webpack": "5.84.1",
+    "webpack-virtual-modules": "0.5.0"
   },
   "resolutions": {
     "@types/react": "17.0.16",
@@ -109,45 +108,45 @@
   "dependencies": {
     "@dom-utils/selector-path": "^1.0.3",
     "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
+    "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.58",
-    "@storybook/addons": "^6.4.13",
-    "@storybook/api": "^6.4.13",
-    "@storybook/client-api": "6.5.10",
-    "@storybook/components": "^6.4.13",
-    "@storybook/core-events": "^6.4.13",
-    "@storybook/theming": "^6.4.13",
-    "array-move": "^3.0.1",
-    "body-parser": "^1.19.0",
-    "clsx": "^1.1.1",
-    "deepmerge": "^4.2.2",
+    "@storybook/addons": "^7.0.18",
+    "@storybook/api": "^7.0.18",
+    "@storybook/client-api": "7.0.18",
+    "@storybook/components": "^7.0.18",
+    "@storybook/core-events": "^7.0.18",
+    "@storybook/theming": "^7.0.18",
+    "array-move": "^4.0.0",
+    "body-parser": "^1.20.2",
+    "clsx": "^1.2.1",
+    "deepmerge": "^4.3.1",
     "fast-deep-equal": "^3.1.3",
-    "fast-glob": "^3.2.4",
+    "fast-glob": "^3.2.12",
     "hash-sum": "^2.0.0",
-    "ip": "^1.1.5",
-    "jest-image-snapshot": "^5.2.0",
-    "join-images": "^1.1.3",
+    "ip": "^1.1.8",
+    "jest-image-snapshot": "^6.1.0",
+    "join-images": "^1.1.5",
     "jsonfile": "^6.1.0",
-    "lodash": "^4.17.20",
-    "nanoid": "^3.1.18",
-    "normalize-url": "6.1.0",
-    "notistack": "^1.0.1",
-    "object-hash": "^2.0.3",
-    "object-path-immutable": "^4.1.1",
-    "p-limit": "3.1.0",
-    "playwright": "1.29.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-json-view": "^1.19.1",
-    "react-map-interaction": "^2.0.0",
-    "react-sortable-hoc": "^1.11.0",
+    "lodash": "^4.17.21",
+    "nanoid": "^4.0.2",
+    "normalize-url": "8.0.0",
+    "notistack": "^3.0.1",
+    "object-hash": "^3.0.0",
+    "object-path-immutable": "^4.1.2",
+    "p-limit": "4.0.0",
+    "playwright": "1.34.3",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-json-view": "^1.21.3",
+    "react-map-interaction": "^2.1.0",
+    "react-sortable-hoc": "^2.0.0",
     "react-split-pane": "^0.1.92",
-    "react-use": "^17.2.4",
+    "react-use": "^17.4.0",
     "reinspect": "^1.1.0",
-    "sharp": "^0.30.4",
-    "tinycolor2": "^1.4.2",
-    "ts-to-json": "^1.7.0",
-    "typescript": "4.9.4",
+    "sharp": "^0.32.1",
+    "tinycolor2": "^1.6.0",
+    "ts-to-json": "^1.7.3",
+    "typescript": "5.0.4",
     "webpack-sources": "^3.2.3"
   },
   "storybook": {
