--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.58",
+    "@storybook/addon-knobs": "^7.0.2",
     "@storybook/addons": "^7.0.18",
     "@storybook/api": "^7.0.18",
     "@storybook/client-api": "7.0.18",
