--- a/package.json
+++ b/package.json
@@ -134,7 +134,9 @@
     "notistack": "^3.0.1",
     "object-hash": "^3.0.0",
     "object-path-immutable": "^4.1.2",
+    "os": "^0.1.2",
     "p-limit": "4.0.0",
+    "path": "^0.12.7",
     "playwright": "1.34.3",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
@@ -148,6 +150,7 @@
     "tinycolor2": "^1.6.0",
     "ts-to-json": "^1.7.3",
     "typescript": "5.0.4",
+    "url": "^0.11.0",
     "webpack-sources": "^3.2.3"
   },
   "storybook": {
